[package]
name = "code2md"
version = "1.0.0"
edition = "2021"
authors = ["m0h1nd4"]
description = "Export project source code into a structured Markdown file"
license = "MIT"
repository = "https://github.com/m0h1nd4/code2md"
readme = "README.md"
keywords = ["cli", "markdown", "documentation", "code", "export"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
walkdir = "2.4"
globset = "0.4"
chrono = "0.4"
anyhow = "1.0"
colored = "2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
